<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/txt0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colabora"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt0"
        android:padding="5sp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:text="@string/hazte_socio"
        android:textSize="@dimen/big"
        app:layout_constraintStart_toEndOf="@id/img1"
        app:layout_constraintTop_toTopOf="@id/img1"
        android:padding="5sp"
  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:textSize="@dimen/medium"
        android:text="@string/cuota"
        app:layout_constraintStart_toStartOf="@id/txt1"
        app:layout_constraintTop_toBottomOf="@id/txt1" />


</androidx.constraintlayout.widget.ConstraintLayout>